Rollback to Java 8 version due to #3