@@ -1,12 +1,15 @@
 # CoGrOO4Py
+
 Uma interface para acessar o analisador morfológico e o corretor gramatical do CoGrOO em Python.
 
 # Pré-requisitos
- - interpretador Python 3.x
- - Pacote py4j (*pip install py4j*)
- - Java Runtime Environment 12 (use a release 0.2 para JRE 8)
+
+- interpretador Python 3.x
+- Pacote py4j (_pip install py4j_)
+- Java Runtime Environment 8
 
 # Como usar
+
 Baixe os arquivos **cogroo_interface.py** e **setup.py** e instale o pacote com o comando:
 
 ```
@@ -26,47 +29,24 @@ Se preferir, instale a partir do GitHub pelo pip:
     Gateway Server Started
 ```
 
-Após isso, em uma IDE Python de sua preferência (ex. IPython, Spyder), importe e instancie a classe *Cogroo*.
+Após isso, em uma IDE Python de sua preferência (ex. IPython, Spyder), importe e instancie a classe _Cogroo_.
 
 ```python
     from cogroo_interface import Cogroo
     cogroo = Cogroo.Instance()
 ```
 
-Agora você já pode usar os recursos do CoGrOO. Esta interface disponibiliza métodos para retornar uma análise morfológica completa de um documento, lematizar, identificar partes do discurso, dividir em chunks e verificar erros gramaticais. 
-
-## Avisos 'Illegal reflective access'
-Após migrar o server do CoGrOO para Java 12, passou a ser exibido o seguinte aviso no console do servidor Java ao processar o primeiro texto enviado para análise:
-
-```
-WARNING: An illegal reflective access operation has occurred
-WARNING: Illegal reflective access by py4j.reflection.MethodInvoker$1 (file:/.../cogroo4py.jar) to method java.util.ArrayList$Itr.next()      
-WARNING: Please consider reporting this to the maintainers of py4j.reflection.MethodInvoker$1
-WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-WARNING: All illegal access operations will be denied in a future release
-```
-
-Esse aviso é exibido por causa do problema descrito [neste issue da biblioteca py4j](https://github.com/bartdag/py4j/issues/314) e não afeta o funcionamento do programa.
-
-## Recompilar servidor Java
-
-Caso precise fazer alguma alteração no servidor Java, você pode recompilá-lo rodando os seguintes comandos na pasta `server` (necessário ter um JDK e o Maven instalados):
-
-```sh
-mvn install
-mvn bundle:bundle
-```
-
-Um arquivo jar será gerado na pasta `server/target` que equivale ao arquivo `cogroo4py.jar` da pasta raiz do repositório (que adicionei só para facilitar o uso do cogroo4py sem precisar entender Java e ter o Maven instalado).
+Agora você já pode usar os recursos do CoGrOO. Esta interface disponibiliza métodos para retornar uma análise morfológica completa de um documento, lematizar, identificar partes do discurso, dividir em chunks e verificar erros gramaticais.
 
 ## Lematizando
+
 A lematização consiste em obter o lema das palavras de um texto. O lema é uma versão da palavra que representa todas as suas flexões. Os verbos são alterados para o infinitivo e substantivos e adjetivos são flexionados para o masculino do singular.
 
-		[estava, estaria, estive, estarei, estar] => estar
-		[fui, vou, irei, iremos] => ir
-		[gato, gatinho, gatão, gata, gatos] => gato
+    	[estava, estaria, estive, estarei, estar] => estar
+    	[fui, vou, irei, iremos] => ir
+    	[gato, gatinho, gatão, gata, gatos] => gato
 
-A lematização é uma alternativa ao *stemming*, um algoritmo que tenta detectar sufixos e removê-los com base nas regras comuns da língua, mas que falha em tratar exceções. A lematização, diferentemente do *stemming*, usa um dicionário morfológico para encontrar o radical das palavras.
+A lematização é uma alternativa ao _stemming_, um algoritmo que tenta detectar sufixos e removê-los com base nas regras comuns da língua, mas que falha em tratar exceções. A lematização, diferentemente do _stemming_, usa um dicionário morfológico para encontrar o radical das palavras.
 
 ```python
     cogroo.lemmatize('Estas laranjas estão deliciosas.')
@@ -74,9 +54,10 @@ A lematização é uma alternativa ao *stemming*, um algoritmo que tenta detecta
 ```
 
 ## Análise morfológica
+
 A análise morfológica consiste em identificar a classe gramatical das palavras de um texto. As classes possíveis são: substantivos, adjetivos, artigos, pronomes, numeral, verbo, advérbio, preposição, conjunção e interjeição.
 
-O método de análise morfológica do CoGrOO usa etiquetas (*tags*) específicas para cada caso, que podem ser difíceis de entender em um primeiro momento. O dicionário *pos_tags* da classe **Cogroo** permite traduzir as etiquetas geradas pelo CoGrOO para um formato legível em português:
+O método de análise morfológica do CoGrOO usa etiquetas (_tags_) específicas para cada caso, que podem ser difíceis de entender em um primeiro momento. O dicionário _pos_tags_ da classe **Cogroo** permite traduzir as etiquetas geradas pelo CoGrOO para um formato legível em português:
 
 ```python
     def _pos_tags(self):
@@ -105,14 +86,14 @@ O método de análise morfológica do CoGrOO usa etiquetas (*tags*) específicas
         pos.update({"adv": "advérbio"})
         pos.update({"xxx": "outro"})
         return pos
-	
+
 	# pos: "part of speech"
 	pos = cogroo.pos_tags
 	pos['n']
 	# substantivo
 ```
 
-No contexto de Processamento de Linguagem Natural as palavras e caracteres de pontuação são normalmente tratados como *tokens*. O método *analyze* associa uma das etiquetas acima para cada *token* de um texto. Também são anotadas algumas *features* que indicam a flexão das palavras, ex. **F=P => *feminino, plural***.
+No contexto de Processamento de Linguagem Natural as palavras e caracteres de pontuação são normalmente tratados como _tokens_. O método _analyze_ associa uma das etiquetas acima para cada _token_ de um texto. Também são anotadas algumas _features_ que indicam a flexão das palavras, ex. **F=P => _feminino, plural_**.
 
 ```python
     doc = cogroo.analyze('Estas laranjas estão deliciosas.')
@@ -122,9 +103,10 @@ No contexto de Processamento de Linguagem Natural as palavras e caracteres de po
     #   estão#v-fin PR=3P=IND,
     #   deliciosas#adj F=P,
     #   .#. -]
- ```
- 
+```
+
 ## Corretor gramatical
+
 O corretor gramatical do CoGrOO verifica a colocação pronominal, concordância nominal, concordância entre sujeito e verbo, concordância verbal, uso de crase, regência nominal, regência verbal e outros erros comuns da língua portuguesa escrita. Mais detalhes sobre as regras aplicadas podem ser encontrados em http://comunidade.cogroo.org/rules.
 
 ```python
@@ -133,7 +115,8 @@ O corretor gramatical do CoGrOO verifica a colocação pronominal, concordância
 	# [[xml:124] O adjetivo na função de predicativo concorda com o sujeito.]
 ```
 
-# Sobre o CoGrOO 
+# Sobre o CoGrOO
+
 Código fonte e informações sobre o projeto:
 http://cogroo.sourceforge.net/
 https://github.com/cogroo/cogroo4
